project/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tangent
  labels:
    apps: tangent-ns
