project/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  namespace: tangent
spec:
  type: LoadBalancer
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: tangent
spec:
  type: LoadBalancer
  selector:
    app: proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: tangent
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
