project/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: tangent
spec:      
  rules:
  - host: cluster.tangent.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-app
          servicePort: 80
      - path: /api
        backend:
          serviceName: proxy
          servicePort: 80
